--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.0.4' %}
+{% set version = '0.0.5' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,11 +10,11 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/broomExtra_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/broomExtra/broomExtra_{{ version }}.tar.gz
-  sha256: 77b4d4d024623fb7df2d3bad4a47748798f9f5658261a8145eaf011fef17e394
+  sha256: d7ec9367149c5b92032cf9be990d2f5630fae004775ff52ba52924929807d0c1
 
 build:
   merge_build_host: True  # [win]
-  number: 1
+  number: 0
   noarch: generic
   rpaths:
     - lib/R/lib/
@@ -30,7 +30,7 @@ requirements:
     - r-dplyr >=0.8.1
     - r-magrittr >=1.5
     - r-purrr >=0.3.2
-    - r-rlang >=0.3.4
+    - r-rlang >=0.4.0
     - r-rsample >=0.0.4
     - r-tidyr >=0.8.3
   run:
@@ -40,7 +40,7 @@ requirements:
     - r-dplyr >=0.8.1
     - r-magrittr >=1.5
     - r-purrr >=0.3.2
-    - r-rlang >=0.3.4
+    - r-rlang >=0.4.0
     - r-rsample >=0.0.4
     - r-tidyr >=0.8.3
 
@@ -59,7 +59,9 @@ about:
     generics provides a convenient way to execute functions across a combination of
     grouping variable(s) in a dataframe or bootstrap them.
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file:
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+    - LICENSE
 
 extra:
   recipe-maintainers:
@@ -68,7 +70,7 @@ extra:
 # Type: Package
 # Package: broomExtra
 # Title: Enhancements for 'broom' Package Family
-# Version: 0.0.4
+# Version: 0.0.5
 # Authors@R:  person(given = "Indrajeet", family = "Patil", role = c("aut", "cre", "ctb"), email = "patilindrajeet.science@gmail.com", comment = c(ORCID = "0000-0003-1995-6531"))
 # Maintainer: Indrajeet Patil <patilindrajeet.science@gmail.com>
 # Description: Collection of functions to assist 'broom' and 'broom.mixed' package-related data analysis workflows. In particular, the generic functions tidy(), glance(), and augment() choose appropriate S3 methods from these two packages depending on which package exports the needed method. Additionally, 'grouped_' and 'boot_' variants of the generics provides a convenient way to execute functions across a combination of grouping variable(s) in a dataframe or bootstrap them.
@@ -76,15 +78,15 @@ extra:
 # URL: https://indrajeetpatil.github.io/broomExtra/, https://github.com/IndrajeetPatil/broomExtra
 # BugReports: https://github.com/IndrajeetPatil/broomExtra/issues
 # Depends: R (>= 3.5.0)
-# Imports: broom (>= 0.5.2), broom.mixed (>= 0.2.4), dplyr (>= 0.8.1), magrittr (>= 1.5), purrr (>= 0.3.2), rlang (>= 0.3.4), rsample (>= 0.0.4), tidyr (>= 0.8.3)
+# Imports: broom (>= 0.5.2), broom.mixed (>= 0.2.4), dplyr (>= 0.8.1), magrittr (>= 1.5), purrr (>= 0.3.2), rlang (>= 0.4.0), rsample (>= 0.0.4), tidyr (>= 0.8.3), utils
 # Suggests: generics, ggplot2, knitr, lme4, rmarkdown, spelling, stringr, testthat
 # VignetteBuilder: knitr
 # Encoding: UTF-8
 # Language: en-US
 # LazyData: true
-# RoxygenNote: 6.1.1
+# RoxygenNote: 6.1.1.9000
 # NeedsCompilation: no
-# Packaged: 2019-06-25 04:21:00 UTC; inp099
+# Packaged: 2019-08-19 12:01:34 UTC; inp099
 # Author: Indrajeet Patil [aut, cre, ctb] (<https://orcid.org/0000-0003-1995-6531>)
 # Repository: CRAN
-# Date/Publication: 2019-06-25 08:00:03 UTC
+# Date/Publication: 2019-08-19 13:30:06 UTC
